Hotfix: fix grid not being visible after map load, fix canvas label after closing / opening right menu

--- a/App/css/style.css
+++ b/App/css/style.css
@@ -96,8 +96,8 @@ label {
 	justify-content: center;
 	width: calc(100% - 66px);
 	backdrop-filter: blur(4px);
-	text-shadow: 1px 1px 2px #000a;
 	border-radius: 10px 0px 0px 0px;
+	text-shadow: 2px 2px 2.8px #000a;
 	background-image: linear-gradient(180deg, #7c55e1aa, #706099aa);
 }
 .APP_DRAG_BAR_ACTIONS {
